# Leduc-poker-cfr

./: .gitignore  CMakeLists.txt  README.md  leduc-poker-cfr-plan.md  notes.md  requirements.txt
.kiro/specs/optimized-leduc-cfr/: design.md  requirements.md  tasks.md
experiments/: plots.ipynb
include/leduc/: agent.h  cfr.h  cfr_node.h  evaluation.h  game.h  game_state.h  strategy.h  types.h
scripts/: test_state_representation.py
src/: agent.cpp  cfr.cpp  evaluation.cpp  game.cpp  play.cpp  strategy.cpp  train.cpp
src/cfr/: cfr.py  tables.py  train.py
src/env/: leduc_env.py
tests/: test_cfr.cpp  test_evaluation.cpp  test_game.cpp
